src/testsuite/single/tests/compiler/fail/two_default.c
void foo() {
    switch (1) {
    default:
    default:
    }
}
